--- a/ci/assets/css/style2.css
+++ b/ci/assets/css/style2.css
@@ -17,7 +17,9 @@
 .fs6  {font-size: 2.2vw}
 .fs7  {font-size: 2.4vw}
 .fs8  {font-size: 2.6vw}
-
+.no-mt{
+    margin-top: 0;
+}
 body{
     /*background-image: url(../images/img1.jpg);*/
     background-size: cover;
@@ -96,8 +98,8 @@ dl dd{
     height: 400px;
 }
 
-.modal { width: 20% !important ; height: 50% !important ; }
-
+.modal { width: 25% !important ; height: 100% !important ; overflow-y: hidden; }
+.login-modal-title{padding-top: 20px;}
 .join1_title{
     margin: 100px 0px;
 }
@@ -132,7 +134,18 @@ dl dd{
 .card-panel{
     margin-bottom: 50px;
 }
+.cus-btn{
+    width: 100%;
+    height: 60px;
+    padding : 10px 5px;
+    margin-top: 20px;
+    border-radius: 60px;
+    background-color: #4e4a4a;
+    font-weight: 700;
+    color: aliceblue;
+}
 /*모바일 화면 미디어쿼리*/
 @media screen and (max-width: 768px) {
-    .modal { width: 100% !important ; height: 100% !important ; }
+    .modal { width: 80% !important ; height: 100% !important ; }
+    .hidden-modile{display: none;}
 }
